# advent-of-code-2024

./: README.md  aoc2024.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day11.hs
src/: Base.hs  Day01.hs
